# haskell-simple-start

./: README.md  my-dummy-package.cabal
src/: MyModule.hs
src/My/Dotted/: Module.hs
