name:                my-dummy-package
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyModule,
                       My.Dotted.Module
  -- Packages you depend on should be specified under "build-depends"
  -- (preferably with a version lower bound).  This is a bit like a
  -- Python "requirements.txt"
  build-depends:       base,
                       HUnit >= 1.6.0.0
  default-language:    Haskell2010
